		* Drawable.getRotation()
		* MathHelper.pointInShape - determines whether a point is inside a Sprites shape/polygon
		* Preferences class, just a helper for SharedPreferences
		* Sprite.clearModifiers()
		* RokonActivity.setGameSize(width, height, force) Can force width/height to remain as given, setGameSize(width, height) now assumes fixed aspect and adjusts
	
	Changes
		* DrawableObject.isOnScreen() returns FALSE if it is not added to a Layer
		* Modifier and some of its methods are now abstract (to force override). The parameters of onStart and onEnd changed.
	
	Bug Fixes
		* Drawable is now public, previously was not. This prevented 'onTouch(Drawable' methods from being used.
		* Point.getY() returned wrong value if it had a parent
		* DrawableObjet.setSize did not modify height
		* TextSprite was being silly, and was looking for FontTexture intead of TextTexture
		* PhysicalSprite did not take into account current rotaton when creating its Body 
		* TextureAtlas was overlapping inserted Textures
		* Touchables are now checked against their rotated position, previously rotation wasn't considered
		* Fixed an issue with the Activity lifecycle, it should now properly reload textures / resume last position in the game when hidden/destroyed
		* Now works on the emulator, unsure where the bug was. Somewhere in this update!

30/06/10 - 2.0.2
	Another quick minor update, sorry for having so many packed together - obviously with the new release came a few unexpected bugs.
	The Droid/Milestone bug seems to have been fixed now.
	
	New Features
		* Vibrator class, for vibrating the device
		* Accelerometer and OnAccelerometerChange classes, for handling accelerometer changes and recognising device shakes
		* Scene.setClearColour changes glClearColor to your own values
		
	Changes
		* Default glClearColor is now black, instead of blue
		
	Bug Fixes
		* Fixed issue with Droid/Milestone. It seems they don't really support VBOs, and hackBrokenDevices wasn't picking that up